--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,20 +2,21 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'org.jetbrains.kotlin.android.extensions'
 
 android {
     signingConfigs {
         config {
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 29
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId 'com.maangata.fillit_tionary'
         minSdkVersion 19
-        targetSdkVersion 28
-        versionCode 15
-        versionName "2.8"
+        targetSdkVersion 29
+        versionCode 23
+        versionName "5 - Room"
     }
     buildTypes {
         release {
@@ -25,26 +26,36 @@ android {
     }
     productFlavors {
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 
 def DAGGER_VERSION = "2.23.2"
+def ROOM_VERSION = "2.2.1"
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta2'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta3'
+    implementation 'com.android.support:appcompat-v7:29.0.0'
+    implementation 'com.android.support:support-v4:29.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "com.google.dagger:dagger:$DAGGER_VERSION"
     implementation "com.google.dagger:dagger-android-support:$DAGGER_VERSION"
-    implementation "android.arch.lifecycle:extensions:1.1.1"
     kapt "com.google.dagger:dagger-android-processor:$DAGGER_VERSION"
     kapt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation "androidx.room:room-runtime:$ROOM_VERSION"
+    implementation "androidx.room:room-ktx:$ROOM_VERSION"
+    testImplementation "androidx.room:room-testing:$ROOM_VERSION"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.50"
 }
 
 repositories {
